--- a/skin/article.haml
+++ b/skin/article.haml
@@ -8,9 +8,9 @@
     %hr{style:"clear:both"}
     #disqus_thread.body
     :script
-      var disqus_url = "http://howtonode.org/#{article.name}";
-    %script(src="http://disqus.com/forums/howtonodeorg/embed.js" type="text/javascript")
-    %a.view-thread(href="http://disqus.com/forums/howtonodeorg/?url=ref")
+      var disqus_url = "http://pine02.fosm.org:8089/#{article.name}";
+    %script(src="http://disqus.com/forums/fosmdotorg/embed.js" type="text/javascript")
+    %a.view-thread(href="http://disqus.com/forums/fosmdotorg/?url=ref")
       View the discussion thread.
     %a.dsq-brlink(href="http://disqus.com")
       blog comments powered by
@@ -25,7 +25,7 @@
             query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&amp;';
           }
         }
-        document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/howtonodeorg/get_num_replies.js' + query + '"></' + 'script>');
+        document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/fosmdotorg/get_num_replies.js' + query + '"></' + 'script>');
       })();
 
 
